# TouchInput

./: .gitignore  Activity.cpp  CMakeLists.txt  DragEvent.cpp  Event.cpp  EventCreator.cpp  LiftEvent.cpp  PressEvent.cpp  README.md  Rect.cpp  main.cpp
include/: Activity.h  DragEvent.h  Event.h  EventCreator.h  LiftEvent.h  Point.h  PressEvent.h  Rect.h
